--- a/src/components/AppItem/index.css
+++ b/src/components/AppItem/index.css
@@ -8,9 +8,7 @@
   padding: 15px;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition:
-    transform 0.3s ease,
-    box-shadow 0.3s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .AppItem:hover {
